css/index.css
*{
    margin: 0;
    padding: 0;
}

.color-blue{
    color: #4AA4FF;
}
.bg-color-blue{
    background-color: #4AA4FF;
    color: #eeeeee;
}
.bg-light-deep-blue{
    background-color: #1d83e9;
}
.bg-deep-blue{
    background-color: #004488;
}
.bg-color-grey{
    background-color: #eeeeee;
}
.top-3{
    top: 3rem;
}
.left-3{
    left: 3rem;
}
.fs-20{
    font-size: 20px;
}
.fs-11{
    font-size: 11px;
}
.rounded-bottom-d, .rounded-all{
    border-bottom-right-radius: 30px!important;
    border-bottom-left-radius: 30px!important;
}
.rounded-top-d, .rounded-all{
    border-top-right-radius: 30px!important;
    border-top-left-radius: 30px!important;
}
.form-control{
    border: none;
    border-bottom: 1px solid #585858!important;
}

.hr{
	width: 55px;
	height: 6px;
	background-color: #4AA4FF;
	border: none;
	margin-top: -5px;
}

body{
    font-family: "Montserrat";
}
.header{
    font-size: 30px;
}
.contact-btn{
    border: none;
    border-radius: 100px;
    padding: 10px 30px;
    background-color: #4AA4FF;
    color: #fff;
    font-size: 20px;
}
.social-icons span{
    width: 50px;
    height: 50px;
    margin: 0 10px;
}
.be{
    content: url("../images/be.svg");
}
.dribbble{
    content: url("../images/dribbble.svg");
}
.fb-colored{
    content: url("../images/fb-colored.svg");
}
.tag{
    font-size: 14px;
    color: #aaaaaa;
}
.app-title {
    color: #9e9e9e;
}
.active-type{
    color: #292929;
}
.blog-image{
    width: 400px;
}

#contact form input.form-control:focus{
    box-shadow: none;
    background-color: inherit;
}
.phone{
    width: 20px;
    content: url("../images/phone.png");
}
.location{
    width: 20px;
    content: url("../images/location.png");
}

@media only screen and (max-width: 768px){
	.rounded-md-all{
		border-radius:30px!important;
	}
}

